data/derived/comb/progs/unify/prog8124.ml.out
Characters 55-63:
  |h::t -> (h*h)::t;;
           ^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
